# MojoRust-Polyglot-Trading-Bot

./: .cache_ggshield  .dockerignore  .env.docker  .env.docker.example  .env.example  .env.flash-loans  .env.production.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  2025-10-06-this-session-is-being-continued-from-a-previous-co.txt  2025-10-06-zrob-audyt-projektu-pamietaj-jestes-expertem-od.txt  API_KEYS_SETUP.md  BRANCH_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODERABBIT_CONFLICT_RESOLUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DEPLOY_NOW_PL.md  DEPLOY_SAVE_FLASH_LOANS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.chainguard  FINAL_POLYGLOT_SUMMARY.md  GRAFANA_SETUP_GUIDE.md  IMPLEMENTATION_GUIDE.md  INFISICAL_SETUP.md  LICENSE  MAINNET_LAUNCH_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  Makefile  OPERATIONS_RUNBOOK.md  (+37 more)
.codacy/: cli.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.kilocode/: mcp.json
benches/: hft_benchmarks.rs
config/: alertmanager.yml  data_consumer.toml  devnet_1sol_strategy.toml  dragonflydb_monitoring.json  flash_loan_free.toml  flash_loan_only_strategy.toml  free_alternatives.toml  loki.yml  mainnet.json  operational_reliability_rules.json  prometheus.yml  promtail.yml  safe_trading.toml  test_config.toml  trading.toml  trading.toml.example  trading_production.toml
core/: Cargo.toml
core/data/: Cargo.toml
core/data/src/: lib.rs
core/data/src/feeds/: client.rs  websocket.rs
core/data/src/processors/: data_consumer.rs  mod.rs
core/execution/: Cargo.toml
core/execution/src/: enhanced_sniper.rs  execution_engine.rs  flash_loan.rs  lib.rs  universal_auth.rs
core/execution/src/enhanced_sniper/: mod.rs
core/execution/src/risk/: rate_limiting.rs
core/infrastructure/: Cargo.toml
core/infrastructure/src/: lib.rs
core/strategies/: Cargo.toml
core/strategies/src/: lib.rs
core/strategies/src/arbitrage/: flash_loan.rs  sandwich.rs
core/strategies/src/mev/: mod.rs
core/strategies/src/sniper/: mod.rs
dashboard/: README.md
deployments/: README.md
docs/: 2025_FEATURES_INTEGRATION.md  ADVANCED_FILTERS_GUIDE.md  API.md  ARBITRAGE_GUIDE.md  ARCHITECTURE.md  BOT_STARTUP_GUIDE.md  BUILD_AND_DEPLOYMENT_GUIDE.md  CHAINGUARD_INTEGRATION.md  CI_CD_GUIDE.md  DATA_INGESTION_ARCHITECTURE.md  DISASTER_RECOVERY.md  DRAGONFLYDB_INTEGRATION.md  FFI_OPTIMIZATION_GUIDE.md  FLASH_LOAN_INTEGRATION.md  FREE_DATA_SOURCES_GUIDE.md  FREE_UNIVERSAL_AUTH_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  JUPITER_INTEGRATION.md  LEGAL_COMPLIANCE.md  MEV_STRATEGY_GUIDE.md  ORCHESTRATOR_ARCHITECTURE.md  PARALLEL_PROCESSING_ARCHITECTURE.md  PORTFOLIO_MANAGER_DESIGN.md  QUICK_START.md  RPC_PROVIDER_STRATEGY.md  RUNBOOK.md  SETUP_GUIDE.md  STRATEGY.md  TRADING_CONTROL_SYSTEM_DESIGN.md  USER_GUIDE.md  WALLET_SETUP_GUIDE.md  aws_vpc_peering_request.md  cpu_optimization_guide.md  monitoring_deployment_guide.md  monitoring_troubleshooting_guide.md  port_conflict_resolution_guide.md  vpc_peering_troubleshooting.md
examples/: flash_loan_paper_trading.py  jupiter_trading_example.py
libs/python_libs/: pyproject.toml
python/: Dockerfile.flash-loan-pipeline  Dockerfile.geyser.chainguard  __init__.py  flash_loan_pipeline.py  geyser_client.py  health_api.py  jupiter_executor.py  jupiter_metrics.py  jupiter_pipeline.py  jupiter_price_api.py  pumpfun_api.py  sandwich_manager.py  save_executor.py  shredstream_bridge.py  solend_executor.py  statistical_arbitrage.py  webhook_manager.py
rust-modules/: Cargo.simple.toml  Cargo.toml  Dockerfile.data-consumer  Dockerfile.data-consumer.chainguard  README.md  build.rs  build_data_consumer.sh  data_consumer.rs
rust-modules/.cargo/: config.toml
rust-modules/benches/: ffi_benchmarks.rs  save_flash_loan_benchmark.rs
rust-modules/src/: arbitrage.rs.backup  data_consumer.rs  flash_loan_security.rs  helius_laserstream.rs  infisical_manager.rs  lib.rs  mock_geyser.rs  quicknode_liljit.rs
rust-modules/src/arbitrage/: cross_exchange.rs  execution.rs  flash_loan.rs  mod.rs  statistical.rs  ten_token.rs  triangular.rs
rust-modules/src/backtesting/: analytics.rs  engine.rs  historical_data.rs  mod.rs
rust-modules/src/crypto/: encryption.rs  hash.rs  keypair.rs  mod.rs  random.rs  signature.rs
rust-modules/src/data_consumer/: mod.rs
rust-modules/src/dex_clients/: mod.rs
rust-modules/src/execution/: execution_engine.rs  flash_loan_coordinator.rs  rpc_router.rs  solend_flash_loan.rs  transaction_pipeline.rs
rust-modules/src/execution/flash_loan/: flash_loan_router.rs  mod.rs  save_flash_loan.rs
rust-modules/src/ffi/: mod.rs  simd.rs
rust-modules/src/flash_loan_free/: mod.rs
rust-modules/src/instruction_parsers/: mod.rs
rust-modules/src/monitoring/: metrics_collector.rs
rust-modules/src/portfolio/: mod.rs
rust-modules/src/proto/: laserstream.proto
rust-modules/src/security/: access_control.rs  audit.rs  input_validation.rs  mod.rs  monitoring.rs  secure_communication.rs
rust-modules/src/solana/: account.rs  mod.rs  program.rs  token.rs  transaction.rs  utils.rs
rust-modules/src/universal_auth_free/: mod.rs
rust-modules/tests/: ffi_safety_tests.rs  integration_tests.rs  save_flash_loan.rs
scripts/: apply_system_optimizations.sh  backup.sh  build_and_deploy.sh  build_chainguard.sh  build_mojo_binary.sh  check_wallet.sh  deploy.sh  deploy_algorithmic_bot.sh  deploy_chainguard.sh  deploy_to_server.sh  deploy_with_filters.sh  devnet_profit_generator.py  diagnose_cpu_usage.sh  docker-entrypoint.sh  flash_loan_starter.py  health_check_cron.sh  import_grafana_dashboards.sh  monitor_cpu_continuous.sh  optimize_vscode_cpu.sh  profile_bot.sh  quick_deploy.sh  recovery_and_safety.py  register_webhooks.sh  resolve_port_conflict.sh  restart_bot.sh  rollback.sh  run_all_tests.sh  server_health.sh  (+14 more)
tests/e2e/: Cargo.toml  mod.rs  test_complete_trading_flow.rs  test_integration_scenarios.rs  test_runner.rs  trading_flow_test.rs
(+186 files in other folders)
