[workspace]
resolver = "2"
members = [
    "data",
    "execution",
    "infrastructure",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance dependencies
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
anchor-lang = "0.30"
anchor-client = "0.30"

# Data dependencies
redis = { version = "0.24", features = ["tokio-comp"] }
postgres = "0.19"
timescaledb-rs = "0.3"
parquet = "51.0"
arrow = "51.0"

# Network dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
tonic = "0.10"
prost = "0.12"

# Security dependencies
ring = "0.17"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"

# Testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"

# FFI dependencies
libffi = "3.2"
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true