[package]
name = "mojo-trading-bot"
version = "0.1.0"
edition = "2021"
description = "High-performance algorithmic trading bot for Solana memecoins"
authors = ["MojoRust Team"]
license = "MIT"

[lib]
name = "mojo_trading_bot"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies (minimal versions to avoid conflicts)
ed25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1.3"

# Solana blockchain integration
solana-sdk = { version = "1.18", features = ["full"] }
solana-client = { version = "1.18", features = ["rpc"] }
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
solana-program-library = { version = "1.18", features = ["full"] }
spl-token = "4.0"
spl-associated-token-account = "2.0"
anchor-lang = "0.29"
anchor-client = "0.29"

# Flash loan and DeFi protocol integrations
solend-sdk = "0.4"
marginfi-sdk = "0.1"
mango-v3 = "0.1"
serum-dex = "4.0"
raydium-sdk = "0.1"
jupiter-swap-api-client = "1.0"

# Jito bundle execution and MEV protection
jito-protos = "0.1"
jito-bundle = "0.1"
jito-json-rpc = "1.0"
jito-tip-distribution = "0.1"
mev-share-rs = "0.1"
flashloan-protocol = "0.1"

# gRPC and streaming for Geyser
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
futures = "0.3"
tower = "0.4"
hyper = "0.14"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bs58 = "0.5"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"

# Async and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = "0.4"
axum = "0.7"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.14"
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json"] }

# Secrets management and security
infisical = { version = "0.2", features = ["async"] }
async-trait = "0.1"
ring = "0.17"
argon2 = "0.5"
secrecy = "0.8"

# Cryptography and signatures
ed25519-dalek = { version = "2.0", features = ["serde", "batch"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1.3"
fastrand = "2.0"

# Time and utilities
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Math and statistics
num-bigint = "0.4"
num-traits = "0.2"
ordered-float = "3.9"
statrs = "0.16"
ndarray = "0.15"
nalgebra = "0.32"

# FFI and system integration
libc = "0.2"
libloading = "0.8"
nix = "0.27"

# HTTP and API client
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
http = "0.2"
mime = "0.3"

# Configuration and environment
config = "0.13"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Monitoring and metrics
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
sentry = { version = "0.31", features = ["anyhow", "tracing"] }

# Testing and development
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

# Additional utilities
regex = "1.10"
constant_time_eq = "0.2"
pbkdf2 = "0.12"
env_logger = "0.10"
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
itertools = "0.11"

# Advanced features for production
once_cell = "1.19"
pin-project = "1.1"
async-stream = "0.3"
futures-util = "0.3"
backoff = "0.4"
retry = "0.5"
circuit-breaker = "0.4"
rate-limiter = "0.3"

# MEV and arbitrage specific
mev-share-solver = "0.1"
arbitrage-core = "0.1"
mev-inspect-rs = "0.1"

# Error handling and resilience
snafu = { version = "0.7", features = ["backtraces", "futures"] }
color-eyre = "0.6"
eyre = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"

[features]
default = ["std"]
std = []
no-std = []