[package]
name = "mojo-trading-bot"
version = "0.1.0"
edition = "2021"
description = "High-performance algorithmic trading bot for Solana memecoins"
authors = ["MojoRust Team"]
license = "MIT"

[lib]
name = "mojo_trading_bot"
crate-type = ["rlib"]

[dependencies]
# Minimal working dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

# gRPC for Helius LaserStream
tonic = "0.11"
prost = "0.12"

# Redis for Dragonfly Pub/Sub
redis = { version = "0.23", features = ["tokio-comp"] }

# Web framework for metrics endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"

# Configuration
dotenvy = "0.15"

# Serialization
bincode = "1.3"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "data_consumer"
path = "src/data_consumer.rs"

[features]
default = ["std"]
std = []