[package]
name = "mojorust-data"
version = "0.1.0"
edition = "2021"
authors = ["MojoRust HFT Team"]
description = "High-performance data pipeline for HFT trading"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Performance dependencies
rayon = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Data dependencies
redis = { workspace = true }
postgres = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }

# Network dependencies
reqwest = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
bincode = "1.3"
prost = { workspace = true }
bytes = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Metrics
prometheus = "0.13"
metrics = "0.22"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }

[[bench]]
name = "data_processing"
harness = false